# bike_shop

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/conf/: conf.yml
app/src/: datasource.rs  main.rs
app/src/datasource/: mysql_connector.rs
bike/: Cargo.toml
bike/migrations/2020-07-21-025859_bikes/: down.sql  up.sql
bike/migrations/2020-07-22-045052_bikes/: up.sql
bike/src/: bike_app.rs  controller.rs  lib.rs  repository.rs  service.rs
bike/src/controller/: bike_controller.rs
bike/src/controller/model/: bike.rs
bike/src/repository/: bike_repository.rs  executor.rs  model.rs  schema.rs
bike/src/repository/executor/: mysql_executor.rs
bike/src/repository/model/: bike.rs
bike/src/service/: bike_service.rs
bike/src/service/model/: bike.rs
