[package]
name = "bike"
version = "0.1.0"
authors = ["mario.murillo <mario.murillo@merlinjobs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0.114"
diesel = { version = "1.4.0", features = ["mysql", "r2d2", "uuid"] }
r2d2 = "0.8"